# iluvatar-corex-ixrt

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCompiler.cmake  FindCuda.cmake  FindIxrt.cmake  SetFlags.cmake
include/: NvInferVersion.h
ixrt/: __init__.py  common.py  exceptions.py  version.py
ixrt/cli/: __init__.py  ixrtexec.py
ixrt/cli/compare_result/: __init__.py  compare.py  config.py  formatting.py  infer_result.py  ixrt_layer_saver.py  memory_watch.py  ort_layer_saver.py  utils.py
ixrt/cli/utils/: __init__.py  cuda.py  data_generate.py  exec_parser.py  io_info.py  quant.py  supported_info.py  tensor.py  trt_inference_work.py
ixrt/deploy/: __init__.py
ixrt/deploy/api/: __init__.py  autotuning.py  executor.py  operator.py  pipeline.py  quant_params.py  quantization.py  source.py  target.py
ixrt/deploy/autotuning/: __init__.py  autotuning_quantization.py  log_parser.py  tuner_logger.py
ixrt/deploy/clis/: __init__.py  base.py  entry_points.py  graph_optimizer_cli.py  tuner_cli.py
ixrt/deploy/core/: __init__.py  base_data_class.py  base_enum.py  base_serializer.py  chain.py  dynamic_enum.py  global_config.py  observer.py  producer_type.py  progress_bar.py  registry.py
ixrt/deploy/fusion/: __init__.py  base_pass.py  factory.py
ixrt/deploy/ir/: __init__.py  base_executor.py  base_source.py  base_target.py  data_type.py  data_type_mapping.py  executor_hook.py  graph.py  operator.py  operator_type.py  utils.py  variable.py
ixrt/deploy/ops/: __init__.py  base.py  reorg.py
ixrt/deploy/quantizer/: __init__.py  quant_function.py  quant_operator_config.py  quant_paramter.py  save_quant_param.py  utils.py
ixrt/deploy/utils/: __init__.py  comparison_expression.py  fundoc.py  gpu_platform.py  object.py  path.py  popen.py  (+2 more)
ixrt/hook/: __init__.py  inject_external_input.py  print_info.py  utils.py
ixrt/utils/: __init__.py  cpp_package.py  load_ixrt_plugin.py  topk.py
requirements/: requirements-ixrt.txt  requirements-quant-tests.txt  requirements-quant.txt
samples/: CMakeLists.txt  CMakeSamplesTemplate.txt  README.md
samples/3rd/: coco_labels.h  imagenet_labels.h  stb_image.h  stb_image_resize.h  stb_image_write.h
samples/common/: CMakeLists.txt
samples/common/include/: CLI11.hpp  batch_stream.h  buffer_utils.h  data_utils.h  error_recorder.h  image_io.h  logging.h  memory_utils.h  misc.h  postprocess_utils.h
samples/common/src/: batch_stream.cc  data_utils.cc  image_io.cc  postprocess_utils.cc
samples/plugins/: CMakeLists.txt
samples/plugins/src/common/: PluginCheckMacros.h  common_def.cuh  plugin.h  serialize.h
samples/plugins/src/common/kernels/: CMakeLists.txt  cuda_helper.cuh
samples/plugins/src/nmsPlugin/: README.md  allClassNMS.cu  bboxUtils.h  cubHelper.h  gatherNMSOutputs.cu  nmsHelper.cc  nmsImpl.cc  nmsImpl.h  nmsKernel.h  nmsPlugin.cc  nmsPlugin.h  sortScoresPerClass.cu  sortScoresPerImage.cu  tensorrtNMS.txt
samples/plugins/src/yoloxDecodePlugin/: CMakeLists.txt  README.md  yoloxDecodeKernel.cu  yoloxDecodeKernel.h  yoloxDecodePlugin.cc  yoloxDecodePlugin.h
samples/python/: README.md  common.py
samples/python/APIToResnet/: APIToResnet.py  gen_wts.py  imagenet_labels.py
samples/python/error_processing/: README.md  main.py
samples/python/int8-with-pytorch-quantization/: README.md  quant.py
samples/python/int8-with-pytorch-quantization/utils/: accuracy.py  argparser.py  calibration.py  imagenet.py
samples/python/python_plugins/: fused_elemnetwise_plugin.py
samples/python/quantization/classification/: autotuning_quantization.py  ptq_classification.py  qat_classification.py  quant_classification.md
samples/python/quantization/classification/utils/: accuracy.py  infer_ixrt.py
samples/python/quantization/detection/: README.md  ptq_detection.py
samples/python/quantization/detection/utils/: __init__.py  accuracy.py  argparser.py  coco.py  coco_common.py
samples/python/resnet18/: README.md  quant.py  resnet18.py  run.sh  sample_hook.py
samples/python/resnet18/utils/: argparser.py  infer_ixrt.py  presets_classification.py
samples/python/with_ppq_quant/: README.md  write_qparams_onnx2ixrt.py
samples/python/yolov3/: README.md  coco_labels.py  common.py  yolov3.py
samples/sampleAPIToInt8Resnet/: CMakeLists.txt  README.md  calibration_dataset.py  gen_int8_wts.py  quant_int_wts.py  sampleAPIToResnetInt8.cc
samples/sampleAPIToResnet/: CMakeLists.txt  README.md  sampleAPIToResnet.cc
samples/sampleBert/: CMakeLists.txt  README.md  builder.py  builder_int8.py  builder_utils.py  builder_utils_int8.py  evaluate-v1.1.py  inference.py  load_ixrt_plugin.py  perf.py  sampleAPIToFP16Bert.cc
samples/sampleBert/helpers/: calibrator.py  data_processing.py  tokenization.py
samples/sampleBert/script/: build_engine.sh  inference.sh  inference_squad.sh  perf.sh  prepare.sh
samples/sampleCondition/: CMakeLists.txt  sampleCondition.cc
samples/sampleHideDataTransfer/: CMakeLists.txt  README.md  cpm.cc  double_buffer.cc  hide_data_transfer.h  main.cc  pipeline.cc  pipeline.h  resnet18.cc  resnet18.h  sync_queue.h
samples/samplePyPlugin/: python_plugin.py
samples/sampleQuant/: CMakeLists.txt  README.md  entropy_calibration.h  main.cc  prepare.sh  quantization.cc  quantization.h
samples/sampleResNet/: CMakeLists.txt  README.md  classification.cc  classification.h  main.cc  perf.cc  quant.py
samples/sampleTypedNetwork/: CMakeLists.txt  README.md  main.cc  strongly_typed.cc  typed_network.h  weakly_typed.cc
samples/sampleYoloV3/: CMakeLists.txt  README.md  deploy.py  sampleYoloV3.cc  yolov3_qdq.py
samples/sampleYoloV5/: CMakeLists.txt  README.md  deploy.sh  sampleYoloV5.cc
samples/sampleYoloV5/config/: YOLOV5S_CONFIG
samples/sampleYoloV5/deploy/: fuse_model.py  quant.py  simplify_model.py
samples/sampleYoloX/: CMakeLists.txt  README.md  create_onnx.py  sampleYoloX.cc  yolox_qdq.py
tools/: README.md
tools/convert_old_ir_to_onnx/: README.md  convert.py
tools/optimizer/: onnx_model_QA_Clip.py  onnx_model_bert.py  onnx_model_gdino.py  onnx_model_rnn.py  onnx_model_stable_diffusion.py  optimizer.py
(+131 files in other folders)
