aux_source_directory(src COMMON_SRC)
include(../../cmake/FindCuda.cmake)
add_library(oss_common STATIC ${COMMON_SRC})
target_include_directories(oss_common PUBLIC ../3rd include ${CUDA_PATH}/include ${IXRT_INCLUDE_DIR})
target_link_libraries(oss_common PUBLIC ${CUDA_LIBRARIES} ${CUDA_cudadevrt_LIBRARY})
